1-mtls/istio-setup/ingress-gateway-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-mutual
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: MUTUAL
      credentialName: mutual-credential
      minProtocolVersion: TLSV1_3
      cipherSuites: [ECDHE-RSA-AES256-GCM-SHA384]
    hosts:
    - istio.demo
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: tls-vs
  namespace: default
spec:
  hosts:
    - istio.demo
  gateways:
    - gateway-mutual
  http:
    - name: istio-demo    
      match:
      - uri:
         prefix: /v1/istiodemo
      route:
        - destination:
            host: istio-demo-v1-0
            port:
              number: 8080
